# zxing-cpp

./: .gitignore  CMakeLists.txt
core/src/: GridSampler.cpp  GridSampler.h  ReadBarcode.cpp  ReadBarcode.h  WhiteRectDetector.cpp  WhiteRectDetector.h
core/src/datamatrix/: DMDecoder.cpp  DMDetector.cpp  DMDetector.h  DMReader.cpp
debug/: CMakeLists.txt  DebugReadbardcode.cpp
drawdebug/: CMakeLists.txt  DebugDrawStuff.cpp  DebugDrawStuff.h
